--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -2,3 +2,18 @@
     border-bottom: 1px solid black;
     padding-bottom: 15px;
 }
+
+.new_contact {
+    background-color: #E0E6F8;
+    border: 1px solid #A9A9F5;
+    border-radius: 3px;
+    margin-top: 10px;
+}
+
+li {
+    list-style: none;
+}
+
+.name {
+    font-size: 1.15em;
+}
