--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,7 @@
+.container {
+    padding-bottom: 25px;
+}
+
 .addressRow {
     border-bottom: 1px solid black;
     padding-bottom: 15px;
@@ -10,16 +14,20 @@
     margin-top: 10px;
 }
 
+.contactBox {
+    float: left;
+    border-left: 1px solid #f0f0f5;
+    border-right: 1px solid #f0f0f5;
+    border-radius: 3px;
+    margin-top: 1px;
+}
+
 li {
     list-style: none;
 }
 
 .name {
-    font-size: 1.15em;
-}
-
-.right {
-    float: left;
+    font-size: 1.25em;
 }
 
 .delete {
